Made flag defaults configurable